Fri Aug 17 08:24:00 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/orbsvcs/CosPropertyService.idl:
          Removed, it was for backward compatibility for years, now time to remove
          it. Users should include CosProperty.idl, this is related to bugzilla 3041,
          thanks to Bogdan Jeram <bjeram at eso dot org> for reporting that issue

        * orbsvcs/orbsvcs/CosProperty.idl:
          Doxygen updates

        * orbsvcs/orbsvcs/CosProperty.mpc:
        * orbsvcs/orbsvcs/Makefile.am:
          Removed CosPropertyService.idl

Thu Aug 16 23:44:00 UTC 2007  Abdullah Sowayan  <abdullah.sowayan@lmco.com>

        * TAO_IDL/ast/ast_argument.cpp:
        * TAO_IDL/ast/ast_enum_val.cpp:
        * TAO_IDL/ast/ast_string.cpp:
        * TAO_IDL/be/be_constant.cpp:
        * TAO_IDL/be/be_operation_strategy.cpp:
        * TAO_IDL/be/be_union_label.cpp:
        * TAO_IDL/be/be_visitor_component/component.cpp:
        * TAO_IDL/be/be_visitor_interface/interface_ih.cpp:
        * TAO_IDL/be/be_visitor_interface/interface_is.cpp:
        * TAO_IDL/be/be_visitor_union_branch/public_reset_cs.cpp:
        * TAO_IDL/be/be_visitor_valuetype/valuetype_obv_ch.cpp:
        * TAO_IDL/fe/fe_private.cpp:
        * TAO_IDL/idl_specs/array.idl:
        * TAO_IDL/idl_specs/constant.idl:
        * TAO_IDL/idl_specs/dif2.idl:
        * TAO_IDL/idl_specs/module.idl:
        * TAO_IDL/idl_specs/primtypes.idl:
        * TAO_IDL/idl_specs/sequence.idl:
        * TAO_IDL/idl_specs/simple.idl:
        * TAO_IDL/idl_specs/simple2.idl:
        * TAO_IDL/idl_specs/struct.idl:
        * TAO_IDL/idl_specs/union.idl:
        * TAO_IDL/idl_specs/union2.idl:
        * TAO_IDL/util/utl_exceptlist.cpp:
        * TAO_IDL/util/utl_exprlist.cpp:
        * TAO_IDL/util/utl_labellist.cpp:
        * TAO_IDL/util/utl_tmpl/utl_decllist.cpp:
        * TAO_IDL/util/utl_tmpl/utl_exceptlist.cpp:
        * TAO_IDL/util/utl_tmpl/utl_exprlist.cpp: